Started Less work
added hero img to html and started on less file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>My Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
-
+  <link href="https://fonts.googleapis.com/css?family=Catamaran|Roboto" rel="stylesheet">
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
@@ -28,7 +28,9 @@
       </header>
       
       <section class="hero">
-
+        <img src="/images/hero.jpg" alt="">
+        <h1>Everyone Needs A Career</h1>
+        <h4>Become a part in providing me a chance for my success</h4>
       </section>
       <main> 
  <!-- Content: Intro - Have a short introduction as to why you would be a good hire -->
