--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
       </header>
       
       <section class="hero">
-        <img src="/images/hero.jpg" alt="">
-        <h1>Everyone Needs A Career</h1>
-        <h4>Become a part in providing me a chance for my success</h4>
+        <div class="top">
+          <h1>Everyone Needs A Career</h1>
+          <h4>Become a part in providing me a chance for my success</h4>
+        </div>  
       </section>
       <main> 
  <!-- Content: Intro - Have a short introduction as to why you would be a good hire -->
