--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
          </ul>
          </section>
          <section class="education">
+           <h4>Education</h4>
           <p> 2019-2020  <span>Lambda School</span> Full Stack Web Development</p>
           <p> 2013-2018  <span> Capella University</span> B.S. Psychology</p>
            
