--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="hero">
         <div class="top">
           <h1>Everyone Needs A Career</h1>
-          <h4>Become a part in providing me a chance for my success</h4>
+          <h4>Become a part in providing a chance at success!</h4>
         </div>  
       </section>
       <main> 
